--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fanni Lestar</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-SDT58XZC3Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-SDT58XZC3Z');
+    </script>
   </head>
   <body>
     <div id="root"></div>
