--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fanni Lestar</title>
+    <meta name="description" content="Fanni Lestar - développeuse front-end React et Next.js basée à Marseille" />
+    <title>Fanni Lestar - Développeuse Front-End</title>
     <!-- Google tag (gtag.js) -->
     <script
       async
